--- a/4_NGtemporal_spatial_data_analysis.ipynb
+++ b/4_NGtemporal_spatial_data_analysis.ipynb
@@ -1544,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1557,12 +1557,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "15837fed74204e26adff39c01cbe33eb",
+       "model_id": "4ec357e3af0e48f3b55d9671800db224",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "KeplerGl(data={'Routes': {'index': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, …"
+       "KeplerGl(config={'version': 'v1', 'config': {'visState': {'layers': [{'id': 'Routes', 'type': 'line', 'config'…"
       ]
      },
      "metadata": {},
@@ -1580,19 +1580,53 @@
     "\n",
     "route_counts = df_filtered.groupby(['PU_lat', 'PU_lng', 'DO_lat', 'DO_lng']).size().reset_index(name='count')\n",
     "\n",
-    "route_counts = df_filtered.groupby(['PU_lat', 'PU_lng', 'DO_lat', 'DO_lng']).size().reset_index(name='count')\n",
+    "min_count = route_counts['count'].min()\n",
+    "max_count = route_counts['count'].max()\n",
     "\n",
     "lines = []\n",
+    "thickness = []\n",
+    "\n",
     "for _, row in route_counts.iterrows():\n",
     "    pickup_location = (row['PU_lng'], row['PU_lat'])\n",
     "    dropoff_location = (row['DO_lng'], row['DO_lat'])\n",
     "    line = LineString([pickup_location, dropoff_location])\n",
     "    lines.append(line)\n",
     "\n",
+    "    # Scale the line thickness based on the count\n",
+    "    count = row['count']\n",
+    "    normalized_count = (count - min_count) / (max_count - min_count)\n",
+    "    scaled_thickness = normalized_count * 5  # Adjust the scaling factor as needed\n",
+    "    thickness.append(scaled_thickness)\n",
+    "\n",
     "gdf_routes = gpd.GeoDataFrame(geometry=lines, crs='EPSG:4326')\n",
+    "gdf_routes['thickness'] = thickness\n",
     "\n",
     "map_1 = KeplerGl(height=600)\n",
+    "\n",
+    "config = {\n",
+    "    \"version\": \"v1\",\n",
+    "    \"config\": {\n",
+    "        \"visState\": {\n",
+    "            \"layers\": [\n",
+    "                {\n",
+    "                    \"id\": \"Routes\",\n",
+    "                    \"type\": \"line\",\n",
+    "                    \"config\": {\n",
+    "                        \"dataId\": \"Routes\",\n",
+    "                        \"isVisible\": True,\n",
+    "                        \"color\": [60, 179, 113],\n",
+    "                        \"thickness\": {\"field\": \"thickness\", \"scale\": \"linear\"},\n",
+    "                        \"sizeRange\": [0, 10],\n",
+    "                        \"opacity\": 0.8\n",
+    "                    }\n",
+    "                }\n",
+    "            ]\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
     "map_1.add_data(data=gdf_routes, name='Routes')\n",
+    "map_1.config = config\n",
     "\n",
     "map_1\n"
    ]
