--- a/5_nasa_data_collection_and_visualization(MA).ipynb
+++ b/5_nasa_data_collection_and_visualization(MA).ipynb
@@ -9412,7 +9412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -9429,7 +9429,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of NEOs in Week 1: 147\n"
+      "Number of NEOs in Week 1: 133\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 37\u001b[0m\n\u001b[0;32m     35\u001b[0m week_1_neos \u001b[38;5;241m=\u001b[39m neos_per_week\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;241m1\u001b[39m ,\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m     36\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNumber of NEOs in Week 1: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mweek_1_neos\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 37\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdf\u001b[49m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
      ]
     }
    ],
@@ -9468,8 +9479,8 @@
     "neos_per_week = analyze_neo_data(data)\n",
     "plot_neos_per_week(neos_per_week)\n",
     "\n",
-    "week_1_neos = neos_per_week.get(2, 0)\n",
-    "print(f\"Number of NEOs in Week 1: {week_1_neos}\")"
+    "week_1_neos = neos_per_week.get(1 ,0)\n",
+    "print(f\"Number of NEOs in Week 1: {week_1_neos}\")\n"
    ]
   },
   {
