--- a/4_temporal_spatial_data_analysis.ipynb
+++ b/4_temporal_spatial_data_analysis.ipynb
@@ -3104,7 +3104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The plot now made sense"
+    "The plot now makes sense."
    ]
   },
   {
