Update to graph

--- a/5_nasa_data_collection_and_visualization.ipynb
+++ b/5_nasa_data_collection_and_visualization.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "060a2262",
    "metadata": {},
@@ -27,7 +26,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0277cced",
    "metadata": {},
@@ -36,7 +34,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "24d52c2e",
    "metadata": {},
@@ -226,7 +223,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9a601f6e",
    "metadata": {},
@@ -236,7 +232,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "290a7d39",
    "metadata": {},
@@ -250,7 +245,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "89e54d2b",
    "metadata": {},
@@ -341,7 +335,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "aca0287f",
    "metadata": {},
@@ -517,7 +510,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "20d6d2c0",
    "metadata": {},
@@ -531,7 +523,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6fead7f5",
    "metadata": {},
@@ -661,7 +652,61 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "894da63d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "week_numbers = []\n",
+    "element_counts = []\n",
+    "counter = 1\n",
+    "\n",
+    "# Iterating over each week's data\n",
+    "for week_data in data:\n",
+    "    element_count = week_data['element_count']\n",
+    "    week_date = list(week_data['near_earth_objects'].keys())[0]\n",
+    "    \n",
+    "    # Extracting the week number from the date\n",
+    "    week_number = pd.to_datetime(week_date).week\n",
+    "    \n",
+    "    week_numbers.append(counter)\n",
+    "    element_counts.append(element_count)\n",
+    "    \n",
+    "    counter += 1\n",
+    "\n",
+    "# Create a DataFrame\n",
+    "df = pd.DataFrame({'Week': week_numbers, 'Number of NEO Sightings': element_counts})\n",
+    "\n",
+    "# The line plot\n",
+    "plt.plot(df['Week'], df['Number of NEO Sightings'], marker='o')\n",
+    "# Add a background color to the plot area\n",
+    "plt.gca().set_facecolor('#f2f2f2')\n",
+    "# Add gridlines for better readability\n",
+    "plt.grid(axis='y', linestyle='--')\n",
+    "\n",
+    "# Annotate the curve\n",
+    "for i in range(len(df)):\n",
+    "    plt.annotate(\n",
+    "        df['Number of NEO Sightings'][i],  # Text to display\n",
+    "        (df['Week'][i], df['Number of NEO Sightings'][i]),  # Position of the point to annotate\n",
+    "        textcoords=\"offset points\",  # Offset the text slightly\n",
+    "        xytext=(0, 10),  # Position the text above the point\n",
+    "        ha='center',  # Horizontal alignment\n",
+    "        fontsize=8  # Font size of the annotation\n",
+    "    )\n",
+    "\n",
+    "plt.xlabel('Week')\n",
+    "plt.ylabel('Number of NEO Sightings')\n",
+    "plt.title('Number of NEO Sightings per Week')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f2ea17ab",
    "metadata": {},
@@ -798,7 +843,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b229dcea",
    "metadata": {},
@@ -914,7 +958,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "82279993",
    "metadata": {},
@@ -1234,7 +1277,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "1730350f",
    "metadata": {},
@@ -1248,7 +1290,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "bb1107cc",
    "metadata": {},
@@ -1289,7 +1330,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d61386ab",
    "metadata": {},
@@ -78356,14 +78396,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cae77dc5",
    "metadata": {},
    "source": [
     "### Task 5: Interpretation of Results"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
+   "id": "092b2a1e",
    "metadata": {},
    "source": [
     "<!-- There is no correlation between average NEO size and its close approach distance.  -->\n",
@@ -78371,8 +78412,8 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
+   "id": "0171bf61",
    "metadata": {},
    "source": [
     "### Task 6: Presentation and Documentation\n",
@@ -78382,8 +78423,8 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
+   "id": "252c87b1",
    "metadata": {},
    "source": []
   }
@@ -78404,7 +78445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
