Revert back to Jun 2 version of individual dsb work

--- a/individual_work/dsb_231387.ipynb
+++ b/individual_work/dsb_231387.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "ox6BA2ofV_3p"
@@ -12,6 +13,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "7gNBBBNDV_3w"
@@ -30,6 +32,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "msQ8IFvWV_3x"
@@ -39,6 +42,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "-hLwyxsUV_3x"
@@ -50,6 +54,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "nTR20eiSV_3y"
@@ -78,6 +83,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "SI0DKpp3V_3z"
@@ -120,6 +126,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "O_VHaBeJV_30"
@@ -146,6 +153,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "6XjKV55tV_31"
@@ -189,6 +197,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "QMUK2TQiV_32"
@@ -219,6 +228,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "ETf0JhXDV_32"
@@ -319,6 +329,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "JIYL_rpIV_33"
@@ -362,6 +373,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "Ab0-qKj0V_33"
@@ -511,6 +523,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "InRQ69SmV_34"
@@ -552,6 +565,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "M-W9EAIqV_34"
@@ -587,6 +601,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "QUzqWROJV_35"
@@ -648,6 +663,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "ymyvkdS6V_36"
@@ -760,6 +776,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "4U61EDtTV_36"
@@ -982,6 +999,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "Swl_9wtdV_37"
@@ -1082,6 +1100,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "HqcwcbD1V_38"
@@ -1204,6 +1223,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "kAC-DH-hV_39"
@@ -1252,6 +1272,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "H3W83prDV_39"
@@ -1274,6 +1295,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "L-fpNQYZV_3-"
@@ -1283,6 +1305,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "T5xSTa1-V_3-"
@@ -1331,6 +1354,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "orVd0jffV_3-"
@@ -1377,6 +1401,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "mmWz1z7AV_3_"
@@ -1434,6 +1459,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "Tm-WOGmxeVZ_"
@@ -1443,6 +1469,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "I3WkLGsOV_3_"
@@ -1520,6 +1547,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "B3dp1tBFV_4A"
@@ -1569,6 +1597,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "OZN7reANV_4A"
@@ -1630,6 +1659,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "6D35-mOsV_4B"
@@ -1661,6 +1691,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "Lh3AfTGYV_4B"
@@ -1742,6 +1773,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "aLkNmyE2V_4C"
@@ -1782,6 +1814,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "MLPpKe0lV_4C"
@@ -1877,7 +1910,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.0"
   },
   "nteract": {
    "version": "0.28.0"
